# chatbot_2

./: .tool-versions  CITATION.cff  ChuanhuChatbot.py  Dockerfile  README.md  allWinsChatbot.py  config_example.json  pyproject.toml  run_Linux.sh  run_Windows.bat
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  feature-request.yml  report-bug.yml  report-docker.yml  report-localhost.yml  report-others.yml  report-server.yml
.github/workflows/: Build_Docker.yml  Release_docker.yml
locale/: en_US.json  extract_locale.py  ja_JP.json  ko_KR.json  ru_RU.json  sv_SE.json
modules/: config.py  presets.py  repo.py  shared.py  utils.py  webui.py
modules/models/: ChuanhuAgent.py  base_model.py  models.py
readme/: README_en.md  README_ja.md  README_ru.md
web_assets/: manifest.json
web_assets/html/: chatbot_header_btn.html  func_nav.html  header_title.html  update.html
web_assets/javascript/: ChuanhuChat.js  chat-history.js  message-button.js  updater.js  webui.js
web_assets/stylesheet/: ChuanhuChat.css  chatbot.css  custom-components.css  override-gradio.css
