[tool.poetry]
name = "chatbot_2"
version = "0.1.0"
description = ""
authors = ["Xuanbin"]

[tool.poetry.dependencies]
python = "^3.11"
gradio = "3.43.2"
gradio-client = "0.5.0"
pypinyin = "^0.49.0"
tiktoken = "^0.5.1"
socksio = "^1.0.0"
tqdm = "^4.66.1"
colorama = "^0.4.6"
googlesearch-python = "^1.2.3"
Pygments = "^2.16.1"
langchain = "0.0.276"
Markdown = "^3.4.4"
PyPDF2 = "^3.0.1"
pdfplumber = "^0.10.2"
pandas = "^2.1.0"
commentjson = "^0.9.0"
openpyxl = "^3.1.2"
pandoc = "^2.3"
wolframalpha = "^5.0.0"
faiss-cpu = "1.7.4"
duckduckgo-search = "^3.8.5"
arxiv = "^1.4.8"
wikipedia = "^1.4.0"
google-generativeai = "^0.1.0"
openai = ">=0.27.9"
unstructured = "^0.10.15"
google-api-python-client = "^2.99.0"
tabulate = "^0.9.0"
ujson = "^5.8.0"
python-docx = "^0.8.11"
websocket-client = "^1.6.3"
pydantic = "1.10.8"
google-search-results = "^2.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
